--- a/public/contact.html
+++ b/public/contact.html
@@ -8,7 +8,7 @@
         <style>
             .contact_section {
                 min-height: 100vh;
-                background: url("images/contact.png") no-repeat;
+                background: url("contact.png") no-repeat;
                 background-position: center;
                 background-size: cover;
                 position: relative;
