--- a/public/stats.html
+++ b/public/stats.html
@@ -1,105 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Stats</title>
-    <link rel="stylesheet" href="css/custom.css" />
-    <style>
-        .stats_body {
-            background: black;
-            color: white;
-            min-height: 100vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-wrap: wrap;
-            padding: 20px;
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8">
+  <title>"Roxineo" Fire</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,700,900" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <style>
+    /* Styles for counter */
+    .counter-container-main {
+      position: fixed;
+      margin-top: 1rem;
+      z-index: 10000;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    .counter-container {
+      text-align: center;
+      margin: 10px;
+      /* Reduced space between the counters */
+    }
 
-        .counter-container {
-            text-align: center;
-            margin: 20px;
-        }
+    .counter-label {
+      font-size: 2rem;
+      margin-bottom: 10px;
+    }
 
-        .counter-label {
-            font-size: 1.5rem;
-            margin-bottom: 10px;
-        }
+    .statistic {
+      display: block;
+      padding: 2rem;
+      font-size: 6rem;
+      font-weight: 700;
+    }
 
-        .statistic {
-            font-size: 4rem;
-            font-weight: 700;
-            line-height: 1.2;
-            padding: 1rem;
-            display: inline-block;
-            color: white;
-        }
+    /* Additional Fire Page Styles */
+    @import url("https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i");
 
-        /* Buttons and form elements (if applicable) */
-        input,
-        button {
-            font-size: 1rem;
-            padding: 10px 15px;
-            border: 1px solid white;
-            border-radius: 6px;
-            background: transparent;
-            color: white;
-            transition: background 0.2s ease;
-        }
+    html,
+    body {
+      height: 100%;
+      font-size: 10px;
+      color: white;
+      font-family: "Karla", sans-serif;
+      background: black;
+    }
 
-        input:focus,
-        button:hover {
-            outline: none;
-            cursor: pointer;
-            background: white;
-            color: black;
-        }
-    </style>
-</head>
-<body>
-    <!-- Stats Section -->
-    <section class="stats_body">
-        <div class="counter-container">
-            <div class="counter-label">Total Tokens in Ecosystem</div>
-            <p class="statistic" aria-live="polite">500</p>
-        </div>
-        <div class="counter-container">
-            <div class="counter-label">Total Transactions Across Ecosystem</div>
-            <p class="statistic" aria-live="polite">1000</p>
-        </div>
-        <div class="counter-container">
-            <div class="counter-label">Total Burned Pdai 🔥</div>
-            <p class="statistic" aria-live="polite">1223344</p>
-        </div>
-    </section>
-
-    <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/countup.js/1.8.5/countUp.min.js"></script>
-    <script src="js/navbar.js"></script>
-    <script>
-        // Count-up animation options
-        const countUpOptions = {
-            useEasing: true,
-            useGrouping: true,
-            separator: ",",
-            decimal: ".",
-        };
-
-        // Initialize count-up animations
-        $(document).ready(() => {
-            $(".statistic").each((index, element) => {
-                const value = parseInt($(element).text().replace(/,/g, ""), 10) || 0;
-
-                // Ensure valid input
-                if (!isNaN(value)) {
-                    const animation = new CountUp(element, 0, value, 0, 2.5, countUpOptions);
-                    animation.start();
-                }
-            });
-        });
-    </script>
-</body>
-</html>
+    /* Reduce space between text and fire animation */
+    #fireCanvas {
