--- a/public/stats.html
+++ b/public/stats.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="./style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,700,900" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+      <link rel="stylesheet" href="css/style.css" />
+
   <style>
     /* Styles for counter */
     .counter-container-main {
