--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="images/nj1.jpg">
-    <meta property="og:description" content="The Portfolio of Freelance Designer Nick Jones">
-    <meta property="og:url" content="https://narrowdesign.com">
-    <meta property="og:title" content="Nick Jones - Freelance Design, Prototype and Code">
+    <meta property="og:title" content="A1S">
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/mousewheel.js"></script>
   </head>
