--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/custom.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="A1S">
+    <meta property="og:title" content="A1A">
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/mousewheel.js"></script>
   </head>
