--- a/public/tools.html
+++ b/public/tools.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Stats</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>Tools</title>
+    <link rel="stylesheet" href="css/custom.css" />
 	<style>
 		body {
 			background-color: black;
