Remove hello and goodbye from home page

--- a/index.html
+++ b/index.html
@@ -1,85 +1,129 @@
-<!DOCTYPE html><html lang="en"><head>
-    <meta charset="UTF-8">
-    <title>A1A ECOSYSTEM</title>
-    <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/custom.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="A1A">
-    <script src="js/jquery-2.1.1.min.js"></script>
-    <script src="js/mousewheel.js"></script>
-  </head>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>A1A ECOSYSTEM</title>
+        <link
+            rel="icon"
+            type="image/png"
+            href="images/favicon-32x32.png"
+            sizes="32x32"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            href="images/favicon-16x16.png"
+            sizes="16x16"
+        />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="css/custom.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta property="og:title" content="A1A" />
+        <script src="js/jquery-2.1.1.min.js"></script>
+        <script src="js/mousewheel.js"></script>
+    </head>
 
-  <body class="bg-black ov-h is-false-is-in is-false is-in">
-    <div class="js-message pos-f fx-c l-phi6 b-phi7 f-w-700 z-10 op-0 vis-h trs-du-1">
-      <div class="js-hello f-s-xxxxl ms-f-s-xxxl po-e-n m-l--025 ms-m-l--05"><a href="http://twitter.com/narrowd">Hello.</a></div>
-      <div class="d-f a-i-end">
-        <a class="d-ib bd-b f-s-s ms-f-s-xs" href="mailto:nick@narrowdesign.com?subject=So, I was on your site and...">Email</a><br>
-        <a class="d-ib bd-b f-s-s ms-f-s-xs m-l-phi8" href="http://twitter.com/narrowd">Twitter</a><br>
-      </div>
-    </div>
-    <div class="js-dots d-ib pos-f r-phi6 ms-r-a ms-l-phi9 t-phi5 ms-t-phi6 h-phi2 ms-h-phi4 fx-c j-c-between m-r-025 z-200">
-      <div class="pos-r d-n ms-d-ib rot-90 w-80px t-o-tl l-05rem t-a-l f-s-xxxs m-b-1"><span class="js-current">1</span> / <span class="js-total">7</span></div>
-      <div class="js-dot w-0 h-0 ol ol-w-1 circle bg-white op-30"></div>
-    </div>
-    <div class="js-spiral-line pos-f fs t-0 l-0 z-400 d-b po-e-n">
-        <svg class="js-spiral-svg w-fs start" x="0px" y="0px" viewBox="-83.4 155.4 985.9 610" enable-background="new -83.4 155.4 985.9 610" xml:space="preserve">
-          <path class="op-50 svg-spiral-big" id="path2776_2_" sodipodi:start="3.1415927" sodipodi:end="4.712389" sodipodi:ry="281.75464" sodipodi:cx="337.94031" sodipodi:open="true" sodipodi:type="arc" sodipodi:rx="301.58487" sodipodi:cy="2354.0146" fill="none" stroke="#d9cfe6" stroke-width=".1" d="
+    <body class="bg-black ov-h is-false-is-in is-false is-in">
+        <section class="bg-black ov-h is-false-is-in is-false is-in">
+            <div
+                class=" pos-f fx-c l-phi6 b-phi7 f-w-700 z-10 op-0 vis-h trs-du-1"
+            >
+                <div
+                    class="js-hello f-s-xxxxl ms-f-s-xxxl po-e-n m-l--025 ms-m-l--05"
+                >
+                </div>
+            </div>
+            <div
+                class="js-dots d-ib pos-f r-phi6 ms-r-a ms-l-phi9 t-phi5 ms-t-phi6 h-phi2 ms-h-phi4 fx-c j-c-between m-r-025 z-200"
+            >
+                <div
+                    class="pos-r d-n ms-d-ib rot-90 w-80px t-o-tl l-05rem t-a-l f-s-xxxs m-b-1"
+                >
+                    <span class="js-current">1</span> /
+                    <span class="js-total">7</span>
+                </div>
+                <div
+                    class="js-dot w-0 h-0 ol ol-w-1 circle bg-white op-30"
+                ></div>
+            </div>
+            <div class="js-spiral-line pos-f fs t-0 l-0 z-400 d-b po-e-n">
+                <svg
+                    class="js-spiral-svg w-fs start"
+                    x="0px"
+                    y="0px"
+                    viewBox="-83.4 155.4 985.9 610"
+                    enable-background="new -83.4 155.4 985.9 610"
+                    xml:space="preserve"
+                >
+                    <path
+                        class="op-50 svg-spiral-big"
+                        id="path2776_2_"
+                        sodipodi:start="3.1415927"
+                        sodipodi:end="4.712389"
+                        sodipodi:ry="281.75464"
+                        sodipodi:cx="337.94031"
+                        sodipodi:open="true"
+                        sodipodi:type="arc"
+                        sodipodi:rx="301.58487"
+                        sodipodi:cy="2354.0146"
+                        fill="none"
+                        stroke="#d9cfe6"
+                        stroke-width=".1"
+                        d="
             M630.9,596.6c0.3,0,0.6-0.3,0.6-0.6c0-0.6-0.4-1-1-1c-0.9,0-1.6,0.7-1.6,1.6l0,0c0,1.4,1.2,2.6,2.6,2.6l0,0c2.3,0,4.2-1.9,4.2-4.2
             l0,0c0-3.8-3.1-6.8-6.8-6.8l0,0h0.1l0,0c-6.9,0-12.5,5.6-12.5,12.5v-0.1c0,11.2,9.1,20.3,20.3,20.3l0,0h-0.1l0,0
             c18.3,0,33.1-14.8,33.1-33.1l0,0.6c0-30.3-24.5-54.8-54.8-54.8l0,0l0.1,0l0,0c-48.3,0-87.5,39.2-87.5,87.5v0
             c0,78.8,63.9,142.8,142.8,142.8l0,0l0,0c128.3,0,232.3-104,232.3-232.3l0,0l0,0c0-207.7-168.4-376.1-376.1-376.1l0,0l0.2,0l0,0
-            c-336.8,0-609.9,273.1-609.9,609.9"></path>
-        </svg>
-    </div>
-    <div class="js-close-icon pos-f t-0 l-fs w-2rem ms-w-3rem h-2rem ms-h-3rem m-r-phi6 m-t-phi6 ms-m-r-0 ms-m-t-0 z-500">
-      <svg class="w-100p h-100p" x="0px" y="0px" viewBox="0 0 40.729 40.729" enable-background="new 0 0 40.729 40.729" xml:space="preserve">
-      <circle class="js-close-bg" cx="20.365" cy="20.365" r="20.365"></circle>
-      <polygon class="js-close-lines" fill="#FFFFFF" points="28.465,13.325 27.404,12.264 20.365,19.304 13.325,12.264 12.264,13.325 19.304,20.365
-        12.264,27.405 13.325,28.465 20.365,21.425 27.404,28.465 28.465,27.405 21.425,20.365 "></polygon>
-      </svg>
+            c-336.8,0-609.9,273.1-609.9,609.9"
+                    ></path>
+                </svg>
+            </div>
+            <div
+                class="js-close-icon pos-f t-0 l-fs w-2rem ms-w-3rem h-2rem ms-h-3rem m-r-phi6 m-t-phi6 ms-m-r-0 ms-m-t-0 z-500"
+            >
+                <svg
+                    class="w-100p h-100p"
+                    x="0px"
+                    y="0px"
+                    viewBox="0 0 40.729 40.729"
+                    enable-background="new 0 0 40.729 40.729"
+                    xml:space="preserve"
+                >
+                    <circle
+                        class="js-close-bg"
+                        cx="20.365"
+                        cy="20.365"
+                        r="20.365"
+                    ></circle>
+                    <polygon
+                        class="js-close-lines"
+                        fill="#FFFFFF"
+                        points="28.465,13.325 27.404,12.264 20.365,19.304 13.325,12.264 12.264,13.325 19.304,20.365
+        12.264,27.405 13.325,28.465 20.365,21.425 27.404,28.465 28.465,27.405 21.425,20.365 "
+                    ></polygon>
+                </svg>
+            </div>
+            <div class="js-spiral pos-f t-0 l-0 fs z-20">
+                <div
+                    class="js-section pos-a bg-white black bd ms-bd-w-2 ol page page-1"
+                ></div>
+                <header
+                    role="banner"
+                    class="js-section pos-a bg-white black bd ms-bd-w-2 ol page page-2"
+                ></header>
+                <div
+                    class="js-section js-project pos-a bg-yellow black bd ms-bd-w-2 ol page page-3"
+                ></div>
+                <div
+                    class="js-section js-project pos-a bg-got color-got bd ms-bd-w-2 ol page page-4"
+                ></div>
+                <div
+                    class="js-section js-project pos-a bg-prometheus color-prometheus bd ms-bd-w-2 ol page page-5"
+                ></div>
+            </div>
 
-    </div>
-    <div class="js-spiral pos-f t-0 l-0 fs z-20">
-      <div class="js-section pos-a bg-white black bd ms-bd-w-2 ol page page-1"></div>
-      <header role="banner" class="js-section pos-a bg-white black bd ms-bd-w-2 ol page page-2"></header>
-      <div class="js-section js-project pos-a bg-yellow black bd ms-bd-w-2 ol page page-3"></div>      
-      <div class="js-section js-project pos-a bg-got color-got bd ms-bd-w-2 ol page page-4"></div>
-      <div class="js-section js-project pos-a bg-prometheus color-prometheus bd ms-bd-w-2 ol page page-5"></div>
-      <div class="js-section js-project pos-a bg-nfc color-nfc bd ms-bd-w-2 ol page page-6"></div>
-      <div class="js-section js-project pos-a bg-grid color-grid white bd ms-bd-w-2 ol page page-7"></div>
-      <div class="js-section js-project pos-a bg-spent color-spent bd ms-bd-w-2 ol page page-8"></div>
-
-
-    </div>
-    <div class="js-gallery pos-a t-0 l-0 ms-h-phi1 w-fs h-0 z-300 po-e-n white ov-h vis-h">
-      <div class="js-gallery-image pos-r ms-pos-a l-0 t-0 w-fs h-100vw ms-w-phi1 ms-h-phi1 vis-h op-0 ov-h">
-        <img src="images/nj1.jpg" class="pos-r d-b w-100p h-100p" alt="project gallery image1">
-      </div>
-      <div class="js-gallery-image pos-r ms-pos-a l-0 ms-l-phi1 ms-t-0 w-fs h-100vw ms-w-phi2 ms-h-phi2 vis-h op-0 ov-h">
-        <img src="images/got2.jpg" class="pos-r d-b w-100p h-100p" alt="project gallery image">
-      </div>
-      <div class="js-gallery-image pos-r ms-pos-a l-0 ms-l-phi1 w-fs h-100vw ms-t-phi2 ms-w-phi3 ms-h-phi3 ms-m-l-phi4 vis-h op-0 ov-h">
-        <img src="images/got3.jpg" class="pos-r d-b w-100p h-100p" alt="project gallery image2">
-      </div>
-      <div class="js-gallery-image pos-r ms-pos-a l-0 ms-l-phi1 w-fs h-100vw ms-t-phi2 ms-w-phi4 ms-h-phi3 vis-h op-0 ov-h">
-        <img src="images/got4.jpg" class="pos-r d-b w-100p h-100p" alt="project gallery image3">
-      </div>
-      <div class="js-gallery-description-box pos-r ms-d-f j-c-between pos-r ms-t-phi1 p-t-phi4 p-phi5 bg-white black">
-        <div class="js-gallery-title pos-r d-f fx-c f-s-xxxl ms-f-s-xl f-w-700 m-b-phi5 ms-m-b-0 ms-m-r-2">
-          Loading Project Title...
-        </div>
-        <div class="js-gallery-description max-w-720px w-100p pos-r f-s-m">
-          Loading project description...
-        </div>
-        <a href="mailto:nick@narrowdesign.com?subject=So, I was on your site and...&amp;body=Had a question about a project" class="a-s-s"><div class="js-ask m-t-2 ms-m-t-05 ms-m-l-2 f-w-700 d-ib p-h-1o5 p-v-1 rounded-3">Ask me about it.</div></a>
-      </div>
-    </div>
-
-    <script type="text/javascript" src="js/script.js"></script>
-    <!-- <script type="text/javascript" src="js/spiral.js"></script> -->
-     <script src="js/navbar.js"></script>
-  
-
-</body></html>
+            <script type="text/javascript" src="js/script.js"></script>
+            <script src="js/navbar.js"></script>
+        </section>
+    </body>
+</html>
