--- a/public/tools.html
+++ b/public/tools.html
@@ -115,8 +115,8 @@
     
     <!-- Menu -->
     <nav class="tools_menu">
-      <a href="#liq-check">Liquidity Checker</a>
-      <a href="#liq-web">Liquidity WebView</a>
+      <a href="l1q.html">Liquidity Checker</a>
+      <a href="https://sunny.pub">Liquidity WebView</a>
       <a href="#reward-calc">RewardR Reward Calculator</a>
     </nav>
     
