--- a/public/tools.html
+++ b/public/tools.html
@@ -117,7 +117,7 @@
     <nav class="tools_menu">
       <a href="l1q.html">Liquidity Checker</a>
       <a href="https://sunny.pub">Liquidity WebView</a>
-      <a href="#reward-calc">RewardR Reward Calculator</a>
+      <a href="https://r3wardr.vercel.app/">RewardR Reward Calculator</a>
     </nav>
     
     <!-- Rotating Cube -->
