fix contact menu

--- a/public/contact.html
+++ b/public/contact.html
@@ -13,6 +13,9 @@
                 background-size: cover;
                 position: relative;
             }
+            .contact_menu-container {
+                /* position: relative; */
+            }
             .central-buttons {
                 position: absolute;
                 top: 60%;
@@ -23,15 +26,15 @@
             }
 
             .tg {
+                background: url("x.png") no-repeat;
+                background-size: cover;
+                background-position: center;
+            }
+            .x {
                 background: url("tg.png") no-repeat;
                 background-size: cover;
                 background-position: center;
                 background-color: #33abdf;
-            }
-            .x {
-                background: url("x.png") no-repeat;
-                background-size: cover;
-                background-position: center;
             }
             .central-button {
                 height: 4rem;
@@ -42,8 +45,8 @@
 
             .contact_menu {
                 position: absolute;
-                width: 100%;
-                height: 100%;
+                top: 59%;
+                left: 61%;
                 transform: scale(0);
                 transition: transform 0.3s ease;
             }
